fix: contact modal on small screens

--- a/styles/contactForm.module.css
+++ b/styles/contactForm.module.css
@@ -55,3 +55,9 @@
     transform: scale(1);
   }
 }
+
+@media only screen and (max-width: 50em) {
+  .contactForm input:focus + .inputUnderline::after {
+    width: 59.3%;
+  }
+}
