--- a/styles/modal.module.css
+++ b/styles/modal.module.css
@@ -70,3 +70,12 @@
     opacity: 1;
   }
 }
+
+@media only screen and (max-width: 50em) {
+  .modal {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
